# KeddesGameEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  debugConfig.sh  run.sh
.cache/clangd/index/: Game.cpp.95B3C80E214EF8A9.idx  Game.h.FE7288BD66249563.idx  IMG.c.4157AF7EEE39BA0B.idx  IMG.h.2E5A538562115B32.idx  IMG_WIC.c.5CB92111309D9EFE.idx  IMG_avif.c.0C9D032C8563C62E.idx  IMG_bmp.c.4271CC7ED30B0971.idx  IMG_gif.c.0625EDDA25C42279.idx  IMG_jpg.c.3E9464DE3ADCDA4B.idx  IMG_jxl.c.7745E456DE695BB6.idx  IMG_lbm.c.5F0F586E68B2A611.idx  IMG_pcx.c.0A212DB8A5BC78B4.idx  IMG_png.c.667849279F180DA3.idx  IMG_pnm.c.BD3DBFA80ECB4CE3.idx  IMG_qoi.c.8EB536C82BCF0DFC.idx  IMG_stb.c.7AE48B00C2FBE330.idx  IMG_svg.c.4CC8531642EAA09E.idx  IMG_tga.c.519BA3EC02408B80.idx  IMG_tif.c.350B22A79B71A0B7.idx  IMG_webp.c.352C6567BF3E428F.idx  IMG_xcf.c.1D364804864B71FA.idx  (+430 more)
Dev/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Dev/src/: Makefile
debug/src/: cmake_install.cmake
src/: CMakeLists.txt  main.cpp
src/assets/: Sprite-0002.ase
src/game/: CMakeLists.txt  Components.h  ECS.h  Game.cpp  Game.h  Game.md  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
src/game/ECS/: CMakeLists.txt  ECS.h  EntityType.h  EnumClassIterator.h  GravityComponent.cpp  GravityComponent.h  MapCollisionComponent.cpp  MapCollisionComponent.h  PositionComponent.cpp  PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h
src/game/SampleGame/: CMakeLists.txt  Player.cpp  Player.h
src/textureManager/: CMakeLists.txt
(+4 files in other folders)
